panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__preprocessor__test_standard_va_opt_example.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_standard_va_opt_example.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration x~0 `int` 42)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (return (name x~0 `int`)))))

----- stderr -----
